# excel2csv

./: .dockerignore  .gitignore  Dockerfile  README.md  excel2csv-gzip.cmd  excel2csv.cmd  install-sendto.cmd  pyproject.toml  uninstall-sendto.cmd
scripts/: excel2csv.ps1  excel2csv.sh  install-sendto.ps1  uninstall-sendto.ps1
src/excel2csv/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
